<resources>
    <string name="app_name">TransInfo</string>
    <string name="live_streaming">Live Streaming</string>
    <string name="media_sosial">Media Sosial</string>
    <string name="angkutan_pasuruan">Angkutan\nPasuruan</string>
    <string name="si_angsa">Si Angsa\nPasuruan</string>
    <string name="link_website">Link Website</string>
    <string name="daerah_rawan">Daerah Rawan</string>
    <string name="pusat_kesehatan">Pusat Kesehatan</string>
    <string name="link_perizinan">Layanan Perhubungan</string>
    <string name="uji_kir">Uji Kir Pasuruan</string>
    <string name="tempat_parkir">Tempat Parkir</string>
    <string name="telepon_penting">Telepon Penting</string>
    <string name="pengaduan">Pengaduan</string>
    <string name="dishub">Dinas Perhubungan</string>
    <string name="ex_list_cctv">Alun - Alun Bangil</string>
    <string name="cctv_title">Pasuruan Transport Center</string>
    <string name="live_streaming_lalin">Live Streaming Lalu Lintas</string>
    <string name="title_activity_cctv_maps">Map</string>
    <string name="dinas_perhubungan">Dinas Perhubungan</string>
    <string name="kabupaten_pasuruan">Kabupaten Pasuruan</string>
    <string name="ex_telp">08224483055</string>
    <string name="ex_polisi">Polisi</string>
    <string name="dinas_nperhubungan">Dinas\nPerhubungan</string>
    <string name="kabupaten_npasuruan">Kabupaten\nPasuruan</string>
    <string name="telp_penting_title">Daftar Telepon Penting</string>
    <string name="link_medsos_title">Link Media Sosial</string>
    <string name="info_web_title">Informasi Website</string>
    <string name="tempat_parkir_title">Tempat Parkir</string>
    <string name="tempat_wisata">Tempat Wisata</string>
    <string name="tempat_wisata_title">Tempat Wisata</string>
    <string name="rawan_laka">Rawan\nKecelakaan</string>
    <string name="type_daerah_rawan_title">Jenis Daerah Rawan</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">Dinas Perhubungan Kabupaten Pasuruan</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="upload_image">UPLOAD IMAGE</string>
    <string name="read_file">This app needs access to your file storage so that it can read photos.</string>
    <string name="menu_home">Beranda</string>
    <string name="menu_account">Akun</string>
    <string name="pilih_foto_ktp">Pilih Foto KTP</string>
    <string name="live_cctv">Kondisi\nLalu Lintas</string>
    <string name="db_preferences">SHARED_PREF_123AS23</string>
    <string name="create_new">Buat akun baru</string>
    <string name="laporan_pengaduan_title">Laporan Pengaduan</string>
    <string name="title_activity_kesehatan_maps">Map</string>
    <string name="website_utama">Website Utama</string>
    <string name="ex_izin">Penutupan jalan sukodono bangil karena ada kegiatan perbaikan jalan yang dilakukan oleh warga setempat</string>
    <string name="ex_tgl_izin">2020-04-30 12:30:59</string>
    <string name="add_perizinan">Tambah Perizinan</string>
    <string name="perizinan_saya">Perizinan Saya:</string>
    <string name="izin_lantas">Jenis Layanan</string>
    <string name="desc_izin">Deskripsi Perizinan</string>
    <string name="akun_transinfo">Akun\nTransInfo</string>
    <string name="title_activity_daerah_maps">Map</string>

</resources>
